--- a/gcc/ChangeLog.1
+++ b/gcc/ChangeLog.1
@@ -1423,7 +1423,7 @@ Fri Apr 12 15:00:52 1999  Stan Cox  <scox@cygnus.com>
 	* cpphash.c (collect_expansion, macroexpand,
 	push_macro_expansion): Make the escape character in macro
 	buffers '\r', not '@'.  Remove code to protect literal
-	occurences of the escape character; '\r' cannot appear
+	occurrences of the escape character; '\r' cannot appear
 	in a macro buffer unless we put it there.
 	* cpplib.c (skip_comment, copy_comment, cpp_skip_hspace,
 	copy_rest_of_line, cpp_get_token, parse_string,
@@ -12503,7 +12503,7 @@ Thu Oct  1 10:42:27 1998  Nick Clifton  <nickc@cygnus.com>
 	* c-common.c (decl_attributes): Call PRAGMA_INSERT_ATTRIBUTES
 	if it is defined.
 
-	* c-lex.c: Replace occurances of HANDLE_SYSV_PRAGMA with
+	* c-lex.c: Replace occurrences of HANDLE_SYSV_PRAGMA with
 	HANDLE_GENERIC_PRAGMAS.
 
 	* varasm.c: Move definition of 'struct weak_syms' into
