--- a/gcc/ChangeLog.4
+++ b/gcc/ChangeLog.4
@@ -5361,7 +5361,7 @@ Tue Oct 31 15:33:27 2000  J"orn Rennecke <amylaar@redhat.com>
 
 	* regrename.c: Rewrite to handle multi-register modes and
 	cond_exec instructions.
-	* Makefile.in (regrename.o): Update dependancies.
+	* Makefile.in (regrename.o): Update dependencies.
 	* recog.h (struct operand_alternative): Add is_address.
 	* recog.c (preprocess_constraints) [case 'p']: Set it.
 
