--- a/gcc/ChangeLog.3
+++ b/gcc/ChangeLog.3
@@ -40,7 +40,7 @@
 	(do_import): Likewise.
 	(do_include_next): Likewise.
 	(gcc_pragmas): Add dependency pragma.
-	(do_pragma_dependancy): New pragma.
+	(do_pragma_dependency): New pragma.
 
 2000-06-29  Jason Merrill  <jason@redhat.com>
 
@@ -2684,7 +2684,7 @@ Thu May 25 02:09:10 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 
 	* fold-const.c (extract_muldiv): When constructing a
 	multiplier/divisor, do not expect const_binop to correctly
-	determine if overflow has occured, so check explicitly.
+	determine if overflow has occurred, so check explicitly.
 
 2000-05-24  Alexandre Oliva  <aoliva@cygnus.com>
 
@@ -3799,7 +3799,7 @@ Wed May 10 21:31:44 2000  Jim Wilson  <wilson@cygnus.com>
 
 	* Makefile.in (libgcc.a, stmp-multilib): Depend on FPBIT and DPBIT.
 	* mklibgcc.in: Rewrite to not use functions.  Don't shortcut
-	dependancies on FPBIT and DPBIT.
+	dependencies on FPBIT and DPBIT.
 
 2000-05-10  Nick Clifton  <nickc@redhat.com>
 
@@ -4065,7 +4065,7 @@ Mon May  8 17:16:48 2000  Jim Wilson  <wilson@cygnus.com>
 	* config/ia64/ia64.h (predicate_operator): Declare.
 
 	* config/ia64/ia64.md (extendsfdf2): Split the nop case out
-	of existance.
+	of existence.
 
 	* gensupport.c (process_rtx): Copy and post-process each member
 	of the define_insn rtvec individually.
@@ -9830,7 +9830,7 @@ Fri Mar 17 08:09:14 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 	(add_pure_or_virtual_attribute, gen_enumeration_type_die): Likewise.
 	* dwarfout.c: Similar changes to dwarf2out.c.
 	* expr.c (expand_expr, case ARRAY_REF): Remove redundant code.
-	* genoutput.c (n_occurences): Return -1 for null string.
+	* genoutput.c (n_occurrences): Return -1 for null string.
 	(strip_whitespace): Accept null string and make into function.
 	(scan_operands): Reflect above changes.
 	* sdbout.c (plain_type_1): Use host_integerp and tree_low_cst.
@@ -16497,7 +16497,7 @@ Thu Jan  6 13:44:59 CET 2000  Jan Hubicka  <jh@suse.cz>
 	flag_data_sections or UNIQUE_SECTION_P are true.
 
 	* tm.texi (UNIQUE_SECTION): Document that it can be called for
-	unitialised data decls.
+	uninitialized data decls.
 
 	* config/i386/winnt.c (i386_pe_unique_section): Cope with
 	being called for uninitialised data.
