2001-10-28  David O'Brien  <obrien@FreeBSD.org> 	* config/rs6000/sysv4.h(CPP_PREDEFINES): Quiet warning when overriden. 	(ie, protect with #undef)
Approved by:  Obivous fix rule.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@46597 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,6 +1,12 @@
+2001-10-28  David O'Brien  <obrien@FreeBSD.org>
+
+	* config/rs6000/sysv4.h(CPP_PREDEFINES): Quiet warning when overriden.
+
+
 2001-10-28  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* toplev.c: Fix spelling errors.
+
 
 2001-10-28  David O'Brien  <obrien@FreeBSD.org>
 
