* config/rs6000/rs6000.c (output_mi_thunk): Fix typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@46599 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,18 +1,20 @@
+2001-10-28  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.c (output_mi_thunk): Fix typo.
+
 2001-10-28  David O'Brien  <obrien@FreeBSD.org>
 
-	* config/rs6000/sysv4.h(CPP_PREDEFINES): Quiet warning when overriden.
-
+	* config/rs6000/sysv4.h (CPP_PREDEFINES): Quiet warning when overriden.
 
 2001-10-28  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* toplev.c: Fix spelling errors.
 
-
 2001-10-28  David O'Brien  <obrien@FreeBSD.org>
 
-	* config/elfos.h(_USING_ELFOS_H): Define.
-	* config/rs6000/rs6000.c: Test for _USING_ELFOS_H rather than USING_SVR4_H
-	to know when to turn on ELF support. (svr4.h includes elfos.h)
+	* config/elfos.h (_USING_ELFOS_H): Define.
+	* config/rs6000/rs6000.c: Test for _USING_ELFOS_H rather than
+	USING_SVR4_H to know when to turn on ELF support.
 
 2001-10-28  Joseph S. Myers  <jsm28@cam.ac.uk>
 
