--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-29  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* update_web_docs: Generate libiberty and gnat-style manuals.
+
 2001-10-24  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc_release: Build snapshots from mainline.  Generate Ada and
