--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct 29 07:23:33 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* dwarf2out.c (add_const_value_attribute): Fix error in last
+	change.
+
 Mon Oct 29 12:43:06 CET 2001  Jan Hubicka  <jh@suse.cz>
 
 	* basic-block.h (purge_all_dead_edges): Add update_life_p argument.
