--- a/gcc/ChangeLog.2
+++ b/gcc/ChangeLog.2
@@ -10720,7 +10720,7 @@ Fri Aug 20 22:32:17 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 Thu Aug 19 14:42:38 1999  Mike Stump <mrs@wrs.com>
 			  Mark Mitchell <mark@codesourcery.com>
 
-	* c-common.c (c_get_alias_set): Fix support for poitners and
+	* c-common.c (c_get_alias_set): Fix support for pointers and
 	references.
 
 Thu Aug 19 11:51:22 EDT 1999  John Wehle  (john@feith.com)
