--- a/gcc/ChangeLog.4
+++ b/gcc/ChangeLog.4
@@ -8208,7 +8208,7 @@ Sun Sep 17 10:46:17 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 	(struct language_function): Add x_scope_stmt_stack and
 	x_function_name_declared_p.
 	(RECHAIN_STMTS): Move definition.
-	(lang_statment_code_p): Likewise.
+	(lang_statement_code_p): Likewise.
 	(lang_expand_stmt): Likewise.
 	(lang_expand_decl_stmt): New variable.
 	(lang_expand_function_end): Likewise.
@@ -14103,7 +14103,7 @@ Fri Jul 14 10:25:53 2000  Clinton Popetz  <cpopetz@cygnus.com>
 
 2000-07-14  Neil Booth  <NeilB@earthling.net>
 
-	* cpplex.c (adjust_column): New funcion.
+	* cpplex.c (adjust_column): New function.
 	(skip_whitespace): Use it.
 	(skip_block_comment): Use it, and warn about /*/* with
 	-Wcomments.
