* i386.md (movti_rex64 splitter): Fix condition.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46632 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -17985,8 +17985,8 @@
 (define_split
   [(set (match_operand:TI 0 "nonimmediate_operand" "")
         (match_operand:TI 1 "general_operand" ""))]
-  "reload_completed && GENERAL_REG_P (operands[0])
-   && GENERAL_REG_P (operands[1])"
+  "reload_completed && !SSE_REG_P (operands[0])
+   && !SSE_REG_P (operands[1])"
   [(const_int 0)]
   "ix86_split_long_move (operands); DONE;")
 
