--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-30  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* jni.cc (JNI_CreateJavaVM): Call _Jv_CreateJavaVM. Don't call
+	_Jv_JNI_Init.
+
 2001-10-29  Tom Tromey  <tromey@redhat.com>
 
 	* java/util/zip/GZIPOutputStream.java (write(int)): New method.
