--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-10-30  Kazu Hirata  <kazu@hxi.com>
+
+	* config/arm/arm.c: Fix comment a typo.
+	* config/arm/arm.h: Likewise.
+	* config/ia64/ia64.c: Likewise.
+
 2001-10-30  Jakub Jelinek  <jakub@redhat.com>
 
 	* emit-rtl.c (set_unique_reg_note): Don't create REG_EQUAL or
