Fix a typo in ChangeLog.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46639 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,6 @@
 2001-10-30  Kazu Hirata  <kazu@hxi.com>
 
-	* config/arm/arm.c: Fix comment a typo.
+	* config/arm/arm.c: Fix a comment typo.
 	* config/arm/arm.h: Likewise.
 	* config/ia64/ia64.c: Likewise.
 
