* alias.c: Fix comment formatting. 	* recog.c: Likewise. 	* config/cris/cris.c: Likewise. 	* config/cris/cris.h: Likewise. 	* config/i960/i960.c: Likewise. 	* config/i960/i960.h: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46640 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,14 @@
 2001-10-30  Kazu Hirata  <kazu@hxi.com>
 
+	* alias.c: Fix comment formatting.
+	* recog.c: Likewise.
+	* config/cris/cris.c: Likewise.
+	* config/cris/cris.h: Likewise.
+	* config/i960/i960.c: Likewise.
+	* config/i960/i960.h: Likewise.
+
+2001-10-30  Kazu Hirata  <kazu@hxi.com>
+
 	* config/arm/arm.c: Fix a comment typo.
 	* config/arm/arm.h: Likewise.
 	* config/ia64/ia64.c: Likewise.
