* cfgcleanup.c: Fix a comment typo.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46641 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-10-30  Kazu Hirata  <kazu@hxi.com>
 
+	* cfgcleanup.c: Fix a comment typo.
+
+2001-10-30  Kazu Hirata  <kazu@hxi.com>
+
 	* alias.c: Fix comment formatting.
 	* recog.c: Likewise.
 	* config/cris/cris.c: Likewise.
