* gcc.c-torture/compile/20011029-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46642 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* gcc.dg/20011029-2.c: New test.
 
+	* gcc.c-torture/compile/20011029-1.c: New test.
+
 Mon Oct 29 21:19:53 2001  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* objc/execute/class_self-1.m: New test.
