* lib.adb: Minor reformatting
	* s-taprop.ads: Minor reformatting


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46651 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2001-10-30  Robert Dewar <dewar@gnat.com>
+
+	* lib.adb: Minor reformatting
+
+	* s-taprop.ads: Minor reformatting
+
 2001-10-29  Laurent Guerby  <guerby@acm.org>
 	
 	* init.c:
