* utils2.c (build_allocator): Test for SIZE overflow in array case too
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46653 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-30  Richard Kenner <kenner@gnat.com>
+
+	* utils2.c (build_allocator): Test for SIZE overflow in array case too
+
 2001-10-30  Geert Bosch <bosch@gnat.com>
 
 	* ali-util.adb (Initialize_Checksum): Use out-mode instead of in out. 
