* usage.adb: Minor fix to output for -gnaty.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46661 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-10-30  Robert Dewar <dewar@gnat.com>
+
+	* usage.adb: Minor fix to output for -gnaty.
+
 2001-10-30  Ed Schonberg <schonber@gnat.com>
 
 	* a-reatim.ads: Makes Seconds_Count into a 64-bit integer, 
